--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,79 +1,339 @@
 {
-    "master":"系統管理員",
-    "admin":"行政",
-    "teacher":"老師",
-    "director":"主任",
-    "klass_head":"班主任",
-    "subject_head":"科組長",
-    "assistant":"助理",
-    
-    "Name":"姓名",
-    "Roles":"角色",
-    "Permissions":"權限",
-    "Operation":"操作",
-
-    "student.name_zh": "姓名",
-    "student.sid": "校內編號",
-    "student.dsedj_num": "教青局編號",
-    "student.ssm_num": "衛生局金咭編號",
-    "student.phone": "學生手提電話",
-    "student.name_fn": "外文姓名",
-    "student.name_display": "成績表顯示英文名稱",
-    "student.previour_school": "過往就請學校",
-    "student.previour_grade": "過往就年級",
-    "student.start_klass": "班別號",
-    "student.phone_sms": "接收短訊用手提電話",
-    "student.gender": "性別",
-    "student.dob": "出生日期",
-    "student.entry_date": "入學日期",
-    "student.religion": "宗教",
-    "student.phone_home": "住宅電話",
-    "student.id_type": "證件類別",
-    "student.id_type_other": "請指明證件類別",
-    "student.issue_place_other": "請指明簽發地點",
-    "student.id_num": "證件編號",
-    "student.stay_issue": "逗留簽發日期",
-    "student.stay_expired": "逗留至有效日期",
-    "student.id_issue": "本次發出日期",
-    "student.id_expired": "有效日期",
-    "student.hrc_num": "回鄉證編號",
-    "student.hrc_issue": "回鄉證簽發日期",
-    "student.hrc_expired": "回鄉證有效日期",
-    "student.detail.holy_name": "聖名",
-    "student.detail.baptized": "領洗日期",
-    "student.detail.first_communion": "初領聖體日期",
-    "student.detail.sibling": "兄弟姊妹總數",
-    "student.detail.sibling_at_work": "已工作兄弟姊妹總數",
-    "student.detail.previour_grade": "入校年級(過去就讀)",
-    "student.detail.entry_date": "入校日期(過去就讀)",
-    "student.detail.entry_klass": "就讀年級(過去就讀)",
-    "student.address.road": "住址街名",
-    "student.address.building": "門牌大廈",
-    "student.address.zone": "居住地區",
-    "student.bank.bank_name": "銀行",
-    "student.bank.account_name": "戶口名稱",
-    "student.bank.account_number": "銀行帳號",
-    "student.father.name_zh": "父親姓名",
-    "student.father.occupation": "父親職業",
-    "student.father.mobile": "父親手提電話",
-    "student.mother.name_zh": "母親姓名",
-    "student.mother.organization": "母親工作機構",
-    "student.mother.occupation": "母親職業",
-    "student.mother.mobile": "母親手提電話",
-    "student.guardian.name_zh": "監護人姓名",
-    "student.guardian.occupation": "監護人職業",
-    "student.guardian.kinship": "監護人關係",
-    "student.guardian.organization": "監護人工作機構",
-    "student.guardian.mobile": "監護人手提電話",
-    "student.health.hospital": "醫院",
-    "student.health.status": "學生健康情況",
-    "student.health.chronic": "慢性疾患",
-    "student.health.hereditary": "遺傳性疾病",
-    "student.health.disease": "（食物及藥物）過敏症",
-    "student.health.remark": "remark",
-    "student.health.allergy": "過敏",
-    "student.health.trauma": "創傷",
-    "student.health.trauma_treatment": "創傷治療",
-    "student.health.medician_allergy": "藥物過敏"
-    
+    "zh":"中文",
+    "en":"英文",
+    "lang": "zh",
+    "host":"區會",
+    "headquater":"總會",
+    "welcome_message": "歡迎詞",
+    "readmore": "了解更多",
+    "english": "英文",
+    "chinese": "中文",
+    "portuguese": "葡文",
+    "dashboard": "首頁",
+    "back": "返回",
+    "parish": "堂區",
+    "blogs": "留言板",
+    "feature": "精選組織",
+    "create_feature": "創建精選",
+    "upload": "上傳",
+    "url_link": "網址",
+    "copy_to_clipboard": "複製到剪貼簿",
+    "dragger_sort": "拖拽排序",
+    "upload_drag_drop": "<span class='font-semibold'>點選上傳</span>或拖曳",
+    "logo_size_note": "PNG、JPG 或 GIF（最大 800x400px）",
+    "image_size_note": "PNG、JPG 或 GIF（最大 800x400 像素）",
+    "member_dashboard": "會員專頁",
+    "profile": "會員資訊",
+    "manager": "管理",
+    "portfolios": "個人檔案",
+    "my_organizations": "我的社團",
+    "organization": "社團",
+    "organization_name_zh": "中文名稱",
+    "organization_name_en": "英文名稱",
+    "organization_name_pt": "葡文名稱",
+    "organizations": "社團組織",
+    "organization_members": "屬會會員",
+    "organization_management": "會務管理",
+    "organization_list": "社團組織列表",
+    "organization_switch": "切換",
+    "email.management": "電郵管理",
+    "email.create": "創建電郵",
+    "email.sender": "發件者",
+    "email.recipient": "收件者",
+    "email.cc": "抄送",
+    "email.bcc": "密送",
+    "email.subject": "主旨",
+    "email.message": "電郵內容",
+    "affiliate": "所屬社團",
+    "member": "會員",
+    "members": "會員",
+    "member.reset_password": "重設密碼",
+    "certificates": "證書",
+    "bulletin": "公告",
+    "cancel": "取消",
+    "finish": "完成",
+    "event_registration": "活動報名",
+    "form_registration": "表格填寫",
+    "messages": "通告",
+    "user": "用戶",
+    "update_success": "修改成功",
+    "delete_photo": "刪除相片",
+    "users": "用戶",
+    "configs": "配置",
+    "issues": "問題",
+    "delete_success": "刪除成功",
+    "attendees": "參與者",
+    "qrcode_scanner": "QR 圖碼掃描儀",
+    "service": "服務",
+    "manage_account": "帳號管理",
+    "account": "帳號",
+    "api_tokens": "API令牌",
+    "select_a_new_photo": "選擇一張新的相片",
+    "remove_photo": "刪除相片",
+    "email_unverified": "您的電子郵件地址未經驗證。",
+    "click_verification_email": "按一下此處重新傳送驗證電子郵件。",
+    "sent_verification_link": "新的驗證連結已發送到您的電子郵件地址。",
+    "prefer_language": "預設語言",
+    "login": "登入",
+    "log_out": "登出",
+    "register": "注冊",
+    "photo": "相片",
+    "banner": "橫幅",
+    "thumbnail": "縮圖",
+    "account_registration": "帳號註冊",
+    "account_information": "帳號資料",
+    "account_information_message": "更新您帳戶的個人資料資訊和電子郵件地址。",
+    "membership": "會員資格",
+    "profile_title": "國際名稱，包括 A-Z 字母",
+    "personal_title": "個人資料",
+    "position_title": "角色",
+    "username": "用戶名稱",
+    "password": "密碼",
+    "old_password":"原密碼",
+    "new_password":"新密碼",
+    "confirm_password":"確認密碼",
+    "change_password": "修改密碼",
+    "name": "名稱",
+    "name_zh": "姓名(中文)",
+    "name_fn": "姓名(外文)",
+    "family_name": "姓氏",
+    "given_name": "名字",
+    "middle_name": "中間名稱",
+    "display_name": "顯示名稱",
+    "id_num": "證件號碼",
+    "belt_rank": "帶別",
+    "dob": "出生日期",
+    "age": "年齡",
+    "club": "俱樂部",
+    "gender": "性別",
+    "country": "國家",
+    "city": "城市",
+    "street": "街道",
+    "vat": "增值稅號碼",
+    "zip": "郵遞區號",
+    "email": "電子郵箱",
+    "nickname": "別名",
+    "mobile_number": "手機號碼",
+    "address": "地址",
+    "website": "網站",
+    "phone": "電話",
+    "dod": "死亡日期",
+    "status": "狀態",
+    "fee": "費用",
+    "application_fee": "報名費",
+    "avatar": "頭像",
+    "key": "關鍵詞",
+    "registration_code": "註冊碼",
+    "registration_error": "帳號註冊失敗",
+    "code_error": "註冊碼錯誤",
+    "account_registered": "該電郵已註冊",
+    "login_email": "登入郵箱",
+    "login_username": "登入名稱",
+    "organization_manager": "組織管理",
+    "president": "會長",
+    "attendee_name": "參與者名稱",
+    "member_number": "會員號碼",
+    "user_id": "用戶ID",
+    "id": "ID",
+    "positions": "職位",
+    "card_style": "會員卡樣式",
+    "federation_officials": "總會官員",
+    "organization_officials": "屬會官員",
+    "created_at": "創建於",
+    "updated_at": "更改於",
+    "receipt": "收據",
+    "form_filled": "我的表格",
+    "form": "表格",
+    "forms": "表格列表",
+    "form_generator": "表格生成器",
+    "form_name": "表格名稱",
+    "form_welcome": "歡迎詞",
+    "form_thankyou": "感謝詞",
+    "title": "標題",
+    "title_en": "標題(英文)",
+    "title_fn": "標題(外文)",
+    "brief": "簡要",
+    "description": "簡介",
+    "require_login": "需要登入",
+    "published": "發佈",
+    "banner_image": "橫幅圖片",
+    "attachment": "附件",
+    "for_member": "會員登入",
+    "require_login_note": "公開並需要登入",
+    "for_member_note": "供會員使用",
+    "published_note": "發佈",
+    "region": "地區",
+    "territory": "領地",
+    "abbreviation": "簡寫",
+    "full_name": "全名",
+    "value": "值",
+    "remark": "備註",
+    "entries": "條目",
+    "with_attendance": "出席紀錄",
+    "with_attendance_note": "附有出席紀錄",
+    "organization_member_only": "只供屬會成員",
+    "attended_mebmers": "出席會員",
+    "backup": "備份",
+    "group": "組別",
+    "start_date": "開始日期",
+    "end_date": "結束日期",
+    "classification": "分類",
+    "content": "內容",
+    "article": "文章",
+    "articles": "文章列表",
+    "article_category": "文章組別",
+    "event": "活動",
+    "events": "活動列表",
+    "event_title": "活動名稱",
+    "applications": "報名表",
+    "staff_options": "工作人員選項",
+    "referee_options": "裁判選項",
+    "role": "角色",
+    "roles": "角色",
+    "compettitor": "選手",
+    "athlete_title": "運動員",
+    "coach": "教練",
+    "nationality": "國籍",
+    "favorite_technique": "最喜愛的技巧",
+    "side": "方向",
+    "belt": "帶別",
+    "height": "身高",
+    "weight": "體重",
+    "category": "組別",
+    "referee_title": "裁判",
+    "official_title": "官員",
+    "federation_function": "總會職能",
+    "organization_function": "屬會職能",
+    "guest_title": "官方訪客",
+    "picture_title": "個人照片",
+    "type": "類型",
+    "credit": "費用",
+    "tick": "打鉤",
+    "scan": "掃描",
+    "images": "圖片",
+    "cursor": "游標",
+    "url": "網址",
+    "search": "搜索",
+    "search_clear": "清除搜索",
+    "last_result": "最後結果",
+    "result": "結果",
+    "certificate_title": "證書名稱",
+    "cert_body": "認證機構",
+    "number_format": "編號格式",
+    "cert_template": "證書樣式",
+    "cert_logo": "證書圖標",
+    "type_of_certificate": "證書類型",
+    "certificate_body": "證書內文",
+    "certificate_template": "證書模板",
+    "rank_caption": "排名標題",
+    "issue_date": "簽發日期",
+    "valid_from": "有效期限自",
+    "valid_until": "有效期限至",
+    "number": "號碼",
+    "authorized_by": "被授權於",
+    "date": "日期",
+    "image": "圖片",
+    "sender": "發送者",
+    "receiver": "收件人",
+    "understand": "明白了",
+    "male": "男",
+    "female": "女",
+    "operation": "操作",
+    "state": "狀態",
+    "public": "公開",
+    "valid_at": "驗證於",
+    "expired_at": "過期於",
+    "create_organization": "創建社團",
+    "create_member": "創建會員",
+    "create_login": "創建帳號",
+    "create_user": "創建用戶",
+    "create_form": "創建表格",
+    "create_certificate": "創建證書",
+    "create_config_item": "創建配置項目",
+    "create_competiton": "創建賽事",
+    "create_event": "創建活動",
+    "create_article": "創建文章",
+    "create_message": "創建通告",
+    "add_attendees": "新增參與者",
+    "upload_file": "上傳文檔",
+    "upload_profile_image": "上傳個人相片",
+    "edit_member_profile": "編輯會員資料",
+    "view_member_profile": "查看會員資料",
+    "add_member": "新增會員",
+    "create": "創建",
+    "create_field": "創建欄位",
+    "edit_field": "修改欄位",
+    "data_fields": "資料欄位",
+    "field_label": "欄位名稱",
+    "field_type": "欄位類",
+    "compulsory": "必填欄位",
+    "column_data": "欄位上顯示",
+    "row": "列",
+    "column": "欄",
+    "option": "選項",
+    "add_option": "增加選項",
+    "template": "模版",
+    "layout_direction": "佈局方向",
+    "horizontal": "橫向",
+    "vertical": "縱向",
+    "responses": "回應",
+    "clear":"清除",
+    "edit": "編輯",
+    "view": "查看",
+    "delete": "刪除",
+    "dismiss":"辭退",
+    "save": "保存",
+    "submit": "提交",
+    "add": "增加",
+    "store": "新增",
+    "update": "更新",
+    "export": "輸出",
+    "confirm": "確認",
+    "aband": "放棄",
+    "yes": "是",
+    "no": "否",
+    "and": "和",
+    "attend": "出席",
+    "be_late": "遲到",
+    "leave_early": "早退",
+    "sure_confirmed": "是否確定",
+    "confirm_delete_record": "是否確定刪這條記錄?",
+    "add_members_as_attendees": "新增成員為參與者",
+    "select_members_to_attendees_list": "選擇成員到參與者列表",
+    "input_non_member_to_attendees_list": "輸入非會員到參與者列表",
+    "batch_input_non_member_to_attendees_list": "大量輸入非會員到參與者列表",
+    "acquired_from_your_organization_admin": "從您的組織管理員處取得",
+    "I_agree_to_the": "我同意此",
+    "terms_of_service": "服務條款",
+    "privacy_policy": "隱私權政策",
+    "already_registered": "已經注冊",
+    "forgot_your_password": "忘記了您的密碼?",
+    "remember_me": "記住我",
+    "please_select_parish": "請選擇堂區",
+    "please_input_abbr": "請輸入簡寫",
+    "please_input_name_zh": "請輸入姓名(中文)",
+    "please_select_organization": "請選擇屬會",
+    "please_input_given_name": "請輸入名字",
+    "please_input_family_name": "請輸入姓氏",
+    "please_input_title": "請輸入標題",
+    "please_select_category": "請選擇組別",
+    "please_input_name": "請輸入名稱",
+    "please_input_title_en": "請輸入活動名稱(英文)",
+    "blogs.management": "留言板管理",
+    "blog.user": "創建人",
+    "blog.title": "標題",
+    "blog.description": "簡介",
+    "create_at": "創建時間",
+    "create_blog": "創建板塊",
+    "contents_management": "內容管理",
+    "content.user": "留言人",
+    "masquerade":"偽裝",
+    "widget":"小工具",
+    "import_members": "匯入會員",
+    "import_athletes_list": "匯入會員名單",
+    "import_athletes_information": "點擊或拖曳檔案至此處以匯入運動員",
+    "import_athletes_description": "支援xml, xlsx 檔案上傳。上傳前請確認資料格式與範本一致。",
+    "import_success":"匯入成功!",
+    "import_some_error":"部分資訊未匯入!",
+    "download_member_list_template":"下載會員名單範本"
 }
