--- a/lang/zh.json
+++ b/lang/zh.json
@@ -54,7 +54,8 @@
     "finish": "完成",
     "event_registration": "活動報名",
     "form_registration": "表格填寫",
-    "messages": "通告",
+    "notices": "通告",
+    "messages": "信息",
     "user": "用戶",
     "update_success": "修改成功",
     "delete_photo": "刪除相片",
